--- a/chat_room.html
+++ b/chat_room.html
@@ -299,6 +299,13 @@
   padding-top: 10px;
   padding-bottom: 6px;
 }
+.tag_listing1{
+  max-width:800px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 6px;
+}
 .no_tag_listings{
   font-size:15px;
   font-family: 'Fira Sans', sans-serif;
@@ -397,7 +404,54 @@
 }
 .message_username{
   font-family: 'Fira Sans', sans-serif;
-  margin-left:15px;
+  font-size:20px;
+
+}
+.message_date{
+  font-family: 'Fira Sans', sans-serif;
+  font-size:15px;
+  color:#8E8E8D
+}
+.message_body{
+  width:450px;
+  min-height:100px;
+  background-color: white;
+  border-radius:20px;
+  border-top-left-radius: 0;
+  -webkit-box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+}
+
+.message_options{
+  font-family: 'Fira Sans', sans-serif;
+  font-size:10px;
+  width: 60px !important;
+
+}
+.message_text{
+  font-family: 'Fira Sans', sans-serif;
+  font-size:15px;
+  margin-left:7px;
+  margin-top:4px;
+  overflow-wrap: break-word;
+}
+.message_avatar{
+  -webkit-box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+  box-shadow: 10px 6px 30px -8px rgba(0,0,0,0.75);
+}
+.message_menu{
+  border:none;
+}
+.tool_rack_button{
+  border:none;
+  background-color: inherit;
+}
+.tool_rack_pannel{
+  -webkit-box-shadow: 5px 12px 31px -8px rgba(0,0,0,0.75);
+-moz-box-shadow: 5px 12px 31px -8px rgba(0,0,0,0.75);
+box-shadow: 5px 12px 31px -8px rgba(0,0,0,0.75);
 }
 </style>
   <header>
@@ -412,7 +466,7 @@
   <body>
     <div class="row">
   <div class="column outer-pannel">
-    <p class='room_channel_name'><strong>#TestChannel</strong></p>
+    <p class='room_channel_name' id='room_id1'><strong>#TestChannel</strong></p>
     <div class='spacer' style='height:15px;'></div>
     <div class='notifications'></div>
     <table style='margin:0 auto;'>
@@ -496,6 +550,7 @@
                 <button type="button" class="btn btn-link dropdown-item menu_item_settings" data-toggle="modal" data-target="#channelRules"><i class="fas fa-gavel"></i>  Channel Rules</button>
                 <button type="button" class="btn btn-link dropdown-item menu_item_settings" data-toggle="modal" data-target="#channelDescription"><i class="fas fa-info-circle"></i> Channel Description</button>
                 <button type="button" class="btn btn-link dropdown-item lock_input_box menu_item_settings"><i class="fas fa-lock-open"></i>  Display Input Box</button>
+                <button type="button" class="btn btn-link dropdown-item lock_input_box menu_item_settings" id='delete_all_current_user_messages'><i class="fas fa-trash-alt"></i>  Delete all my messages</button>
                 <a class="dropdown-item" href="#"><span class='menu_item_settings'><i class="fas fa-upload"></i> Export Transcript to CSV</span></a>
               </div>
             </div>
@@ -579,20 +634,39 @@
     </div>
     <!--message listing here-->
     <div class='spacer' style='height:20px;'></div>
-    <div class='message'>
+    <div class='messages' style='margin-top:-60px;'>
+    <div class='message' style='margin-top:5px;'>
       <table>
         <tr>
           <td>
-            <div class='message_avatar' style="background-image:url('https://www.gravatar.com/avatar/93c3d25651e909d195e81fdb3670a017?d=identicon');width:50px;height:50px;background-size:cover;border-radius:10px;"></div>
+            <div class='message_avatar' style="background-image:url('https://www.gravatar.com/avatar/93c3d25651e909d195e81fdb3670a017?d=identicon');width:70px;height:70px;background-size:cover;border-radius:50%;"></div>
 
           </td>
           <td>
-            <div class='container'>
+            <div class='container' style='margin-top:130px;'>
               <div class='row'>
                 <div class='col'>
-                  <p><strong class='message_username'>Ajax1234</strong></p>
+                  <p><strong class='message_username'><a href='/user/1' style='color:black;'>Ajax1234</a></strong></p>
                 </div>
-                <div class='col-md-auto'><p>Today, at 11:55 PM</p></div>
+              </div>
+              <div class='row'>
+                <div class='message_body' id='testChannelMessage1' style='margin-left:-2px;'>
+                  <button class='message_menu' id='menu_for1'><i class="fas fa-ellipsis-h"></i></button>
+                  <div class='message_text_container1' style='line-height: 1.6;'>
+                    <p class='message_text' id='message_info1'>Hey there, thanks for checking us out. Using this for testing, although soon you will be able to post yourself</p>
+                  </div>
+
+                </div>
+                <div class='container'>
+                  <div class='row'>
+                    <div class='col-md-auto' id='message1_tools'></div>
+                    <div class='col'></div>
+                    <div class='col-md-auto'>
+                      <p class='message_date' style='margin-top:5px;margin-right:20px;'>Today, at 11:55 PM</p>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -600,6 +674,7 @@
         </tr>
       </table>
     </div>
+  </div>
     <!--Search Channel Modal-->
     <div class="modal" id="searchChannel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -659,7 +734,7 @@
                 <button type="button" class="dropdown tag_input" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style='margin-left:-60px;'>
                   (Select)
                 </button>
-                <div class="dropdown-menu tag_listing" style='text-align:center' id='tags_for_searching'>
+                <div class="dropdown-menu tag_listing1" style='text-align:center' id='tags_for_searching'>
                   <div class='spacer' style='height:10px;'></div>
                   <span class='post_tag_new' id='searchtag1' style='background-color:red'>New event</span>
                   <div class='spacer' style='height:20px;'></div>
@@ -787,6 +862,7 @@
   <div class="column boxes" style="background-color:#ccc;">
     <h2>Column 3</h2>
     <p>Some text..</p>
+    <p>Add linked channels</p>
   </div>
 </div>
   </body>
@@ -1155,6 +1231,42 @@
       $('#searchtag'+the_id).css('background-color', backgroundcolor)
     });
     //https://www.gravatar.com/avatar/93c3d25651e909d195e81fdb3670a017?d=identicon
+    $('.transcripts').on('click', '.message_menu', function(){
+      var the_id = this.id.match('\\d+');
+      if ($('#message'+the_id+'_tools').text() == ''){
+        var tool_rack = `
+          <div class='container tool_rack_pannel' style='background-color:white;padding-bottom:2px;border-bottom-left-radius:10px;border-bottom-right-radius:10px;'>
+            <div class='row'>
+              <div class='col'>
+                <button class='tool_rack_button' id='delete_message${the_id}'><i class="fas fa-trash-alt" style='font-size:0.8em;'></i></button>
+              </div>
+              <div class='col'>
+               <button class='tool_rack_button' id='edit_message${the_id}'><i class="fas fa-pencil-alt" style='font-size:0.8em;'></i></button>
+              </div>
+              <div class='col'>
+                <button class='tool_rack_button' id='pin_message${the_id}'><i class="fas fa-map-pin" style='font-size:0.8em;'></i></button>
+              </div>
+            </div>
+          </div>
+        `;
+        $('#message'+the_id+'_tools').html(tool_rack);
+      }
+      else{
+        $('#message'+the_id+'_tools').html('');
+      }
+    });
+    $('.transcripts').on('click', '.tool_rack_button', function(){
+      var the_id = this.id.match('\\d+');
+      if (this.id.startsWith('edit')){
+        //message_info1
+        var message_text = $("#message_info"+the_id).text()
+        var input_html = `
+
+          <textarea class="form-control edit_message_box" aria-label="With textarea" id='edited_message${the_id}' style='width:430px;margin:0 auto;font-family:"Fira Sans", sans-serif;'>${message_text}</textarea>
+        `;
+        $('.message_text_container'+the_id).html(input_html);
+      }
+    });
   });
   </script>
 </html>
